Working in all 3 modes